Custum Add MetroUIDark design

--- a/WpfAppAuthentification/App.xaml
+++ b/WpfAppAuthentification/App.xaml
@@ -6,6 +6,12 @@
 
     <!--StartupUri="LoginWindow.xaml">-->
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/Metro/Metro.MSControls.Core.Implicit.xaml" />
+                <ResourceDictionary Source="Themes/Metro/Metro.MSControls.Toolkit.Implicit.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+
     </Application.Resources>
 </Application>
