--- a/WpfAppAuthentification/LoginWindow.xaml
+++ b/WpfAppAuthentification/LoginWindow.xaml
@@ -12,9 +12,10 @@
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="50"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -24,28 +25,34 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="{Binding AuthenticatedUser}" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"
-               FontSize="14" HorizontalAlignment="Right" TextWrapping="Wrap" FontWeight="Bold"
-               Margin="2,2,2,2"/>
-        <TextBlock Text="Username:" Grid.Row="1" Grid.Column="0" />
-        <TextBlock Text="Password:" Grid.Row="2" Grid.Column="0" />
-        <TextBox Text="{Binding Username}" Grid.Row="1" Grid.Column="1" />
-        <PasswordBox x:Name="passwordBox" Grid.Row="2" Grid.Column="1" />
-        <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="1">
+        <TextBlock Text="{Binding AuthenticatedUser}" Grid.Row="0" Grid.Column="1" 
+                   Grid.ColumnSpan="2" FontSize="14" HorizontalAlignment="Center"
+                   TextWrapping="Wrap" FontWeight="Bold" Margin="2,2,2,2"/>
+        <TextBlock Text="Username :" Grid.Row="1" Grid.Column="1" Margin="5"
+                   HorizontalAlignment="Right"/>
+        <TextBlock Text="Password :" Grid.Row="2" Grid.Column="1" Margin="5"
+                   HorizontalAlignment="Right"/>
+        <TextBox Text="{Binding Username}" Grid.Row="1" Grid.Column="2" Margin="5"/>
+        <PasswordBox x:Name="passwordBox" Grid.Row="2" Grid.Column="2" Margin="5"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"
+                    HorizontalAlignment="Right" Margin="5">
             <Button Content="Log in" Command="{Binding LoginCommand, Mode=OneTime}"
-            CommandParameter="{Binding ElementName=passwordBox}"
-            HorizontalAlignment="Center"/>
-            <Button Content="Log out" Command="{Binding LogoutCommand, Mode=OneTime}"
-            Visibility="{Binding IsAuthenticated, Converter={StaticResource booleanToVisibilityConverter}}"
-            HorizontalAlignment="Center" Margin="2,0,0,0"/>
+                    CommandParameter="{Binding ElementName=passwordBox}"
+                    HorizontalAlignment="Center" Padding="3" FontWeight="SemiBold"/>
+            <Button Content="Log out" Command="{Binding LogoutCommand, Mode=OneTime}" Padding="3"
+                    Visibility="{Binding IsAuthenticated, Converter={StaticResource booleanToVisibilityConverter}}"
+                    HorizontalAlignment="Center" Margin="2,0,0,0" FontWeight="SemiBold"/>
         </StackPanel>
-        <TextBlock Text="{Binding Status}" Grid.Row="4" Grid.Column="1"
-               HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Red" TextWrapping="Wrap" />
-        <StackPanel Grid.Row="5" Grid.Column="1" VerticalAlignment="Center" Margin="8">
-            <Button Content="Show secret view" Command="{Binding ShowViewCommand}"
-              HorizontalAlignment="Center" Margin="3" Height="35"/>
-            <Button Content="Show admin view" Command="{Binding ShowViewCommand}" CommandParameter="Admin"
-              HorizontalAlignment="Center" Margin="5" Height="35"/>
+        <TextBlock Text="{Binding Status}" Grid.Row="4" Grid.Column="1" 
+                   Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center"
+                   Foreground="Red" TextWrapping="Wrap"/>
+        <StackPanel Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2" Margin="8">
+            <Button Content="Show secret view" FontWeight="SemiBold" 
+                    VerticalAlignment="Center" Command="{Binding ShowViewCommand}"
+                    HorizontalAlignment="Center" Margin="3" Height="35" Padding="3"/>
+            <Button Content="Show admin view" FontWeight="SemiBold" 
+                    Command="{Binding ShowViewCommand}" CommandParameter="Admin"
+                    HorizontalAlignment="Center" Margin="5" Height="35" Padding="3"/>
         </StackPanel>
     </Grid>
 </Window>
